# dingo-libexpr

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  codec.cc  codec.h  operand.h  operand_stack.h  operator.cc  operator.h  operator_vector.cc  operator_vector.h  operators.cc  operators.h  runner.h  types.cc  types.h
src/calc/: arithmetic.cc  arithmetic.h  casting.cc  casting.h  mathematic.cc  mathematic.h  relational.cc  relational.h  special.cc  special.h  string_fun.cc  string_fun.h
src/expr/: CMakeLists.txt  codec.cc  codec.h  exception.h  expr_string.cc  expr_string.h  operand.cc  operand.h  operand_stack.h  operator.cc  operator.h  operator_vector.cc  operator_vector.h  operators.cc  operators.h  runner.cc  runner.h  types.cc  types.h  utils.cc  utils.h
src/expr/calc/: arithmetic.cc  arithmetic.h  casting.cc  casting.h  mathematic.cc  mathematic.h  relational.cc  relational.h  special.cc  special.h  string_fun.cc  string_fun.h
src/rel/: CMakeLists.txt  pipe_op.h  rel_op.h  rel_runner.cc  rel_runner.h
src/rel/op/: agg.cc  agg.h  agg_op.cc  agg_op.h  filter_op.cc  filter_op.h  grouped_agg_op.cc  grouped_agg_op.h  project_op.cc  project_op.h  rel_op.h  tandem_op.cc  tandem_op.h  ungrouped_agg_op.cc  ungrouped_agg_op.h
src/types/: CMakeLists.txt
src/types/decimal/: decimal.cc  decimal.h  decimal_p.cc  decimal_p.h
test/: CMakeLists.txt  assertions.cc  assertions.h  test_expr.cc
test/expr/: CMakeLists.txt  test_expr.cc  test_expr_decimal.cc  test_types.cc
test/expr/calc/: CMakeLists.txt  test_casting.cc  test_to_string.cc
test/rel/: CMakeLists.txt  test_rel.cc  test_rel_date.cc  test_rel_decimal.cc  test_rel_divide.cc  test_rel_timestamp.cc
test/types/: CMakeLists.txt  test_type_decimal.cc
